@@ -133,9 +133,9 @@ public class ImportHelper {
 			throw new Exception(Msg.getMsg(ctx, "XMLVersionAttributeMandatory"));
 		}
 		///Getting Attributes.
-		int replicationMode = new Integer(rootElement.getAttribute("ReplicationMode"));
+		int replicationMode = Integer.valueOf(rootElement.getAttribute("ReplicationMode"));
 		String replicationType = rootElement.getAttribute("ReplicationType"); // Why we read it from the XML??? This is wrong!
-		int replicationEvent = new Integer(rootElement.getAttribute("ReplicationEvent"));
+		int replicationEvent = Integer.valueOf(rootElement.getAttribute("ReplicationEvent"));
 		
 		MClient client = null;
 		client = getAD_ClientByValue(ctx, AD_Client_Value, trxName);
@@ -371,7 +371,7 @@ public class ImportHelper {
 					refRecord_ID = getID(ctx, referencedExpFormat, referencedNode, line.getValue(), replicationType, po.get_TrxName());
 				}
 				log.info("refRecord_ID = " + refRecord_ID);
-				value = new Integer(refRecord_ID);
+				value = Integer.valueOf(refRecord_ID);
 			}
 			else
 			{
@@ -494,7 +494,7 @@ public class ImportHelper {
 						//
 						if (!Util.isEmpty(value.toString())) {
 							int intValue = Integer.parseInt(value.toString());
-							value = new Integer( intValue );
+							value = Integer.valueOf(intValue);
 						} else {
 							value = null;
 						}
@@ -658,7 +658,7 @@ public class ImportHelper {
 				}
 				log.info("record_ID = " + record_ID);
 
-				cols[col] = new Integer(record_ID);
+				cols[col] = Integer.valueOf(record_ID);
 			}
 			else
 			{
@@ -682,7 +682,7 @@ public class ImportHelper {
 				Object value =  cols[col];
 				if (!Util.isEmpty(value.toString())) {
 					//double doubleValue = Double.parseDouble(value.toString());
-					value = new Integer(value.toString());
+					value = Integer.valueOf(value.toString());
 					if (DisplayType.ID == column.getAD_Reference_ID()) {
 						replication_id = (Integer) value;
 					}
