@@ -98,6 +98,6 @@ public class MTree_NodeU3 extends X_AD_TreeNodeU3 {
      * @param parentId
      */
     public void setParent_ID(int parentId) {
-        set_Value("Parent_ID", new Integer(parentId));
+        set_Value("Parent_ID", Integer.valueOf(parentId));
     }
 }
