@@ -274,9 +274,9 @@ public class PrintData implements Serializable
 	{
 		m_matrix.addRow(nodes);
 		if (functionRow)
-			m_functionRows.add(new Integer(m_matrix.getRowIndex()));
+			m_functionRows.add(Integer.valueOf(m_matrix.getRowIndex()));
 		if (m_hasLevelNo && levelNo != 0)
-			addNode(new PrintDataElement(LEVEL_NO, new Integer(levelNo), DisplayType.Integer, null));
+			addNode(new PrintDataElement(LEVEL_NO, Integer.valueOf(levelNo), DisplayType.Integer, null));
 	}	//	addRow
 
 	/**
@@ -323,7 +323,7 @@ public class PrintData implements Serializable
 	 */
 	public boolean isFunctionRow (int row)
 	{
-		return m_functionRows.contains(new Integer(row));
+		return m_functionRows.contains(Integer.valueOf(row));
 	}	//	isFunctionRow
 
 	/**
@@ -332,7 +332,7 @@ public class PrintData implements Serializable
 	 */
 	public boolean isFunctionRow ()
 	{
-		return m_functionRows.contains(new Integer(m_matrix.getRowIndex()));
+		return m_functionRows.contains(Integer.valueOf(m_matrix.getRowIndex()));
 	}	//	isFunctionRow
 
 	/**
@@ -876,7 +876,7 @@ public class PrintData implements Serializable
 	public void addRow(boolean functionRow, int levelNo, int reportLineId) {
 		addRow(functionRow, levelNo);
 		if (m_hasLevelNo && reportLineId != 0)
-			addNode(new PrintDataElement("PA_ReportLine_ID", new Integer(reportLineId), DisplayType.Integer, null));
+			addNode(new PrintDataElement("PA_ReportLine_ID", Integer.valueOf(reportLineId), DisplayType.Integer, null));
 		
 	}
 
