@@ -282,7 +282,7 @@ public abstract class AbstractExportFormat {
 							createCSVvalue (sb, delimiter,
 									printFormat.getItem(col).getPrintName(language));
 						} else {
-							Object obj = printData.getNode(new Integer(item.getAD_Column_ID()));
+							Object obj = printData.getNode(Integer.valueOf(item.getAD_Column_ID()));
 							if (!item.isDisplayed(printData))
 								obj = null;
 
@@ -310,7 +310,7 @@ public abstract class AbstractExportFormat {
 												+ ") - AD_Column_ID=" + AD_Column_ID + " - " + item);
 									}
 									MQuery query = new MQuery (format.getAD_Table_ID());
-									query.addRestriction(item.getColumnName(), MQuery.EQUAL, new Integer(Record_ID));
+									query.addRestriction(item.getColumnName(), MQuery.EQUAL, Integer.valueOf(Record_ID));
 									format.setTranslationViewQuery(query);
 									log.fine(query.toString());
 									//
