@@ -151,7 +151,7 @@ class RModelData
 					else if (rc.getColClass() == Double.class)
 						row.add(new Double(rs.getDouble(index++)));
 					else if (rc.getColClass() == Integer.class)
-						row.add(new Integer(rs.getInt(index++)));
+						row.add(Integer.valueOf(rs.getInt(index++)));
 					else if (rc.getColClass() == Timestamp.class)
 						row.add(rs.getTimestamp(index++));
 					else if (rc.getColClass() == Boolean.class)
@@ -287,7 +287,7 @@ class RModelData
 						}
 					}   //  for all columns
 					//
-					m_groupRows.add(new Integer(rows.size())); //  group row indicator
+					m_groupRows.add(Integer.valueOf(rows.size())); //  group row indicator
 					rows.add(newRow);
 					groupBysValue[level] = row.get(idx);
 				}
@@ -344,7 +344,7 @@ class RModelData
 			//  remove empty row added earlier to force group change
 			if (gSize > 0)
 				rows.remove(rows.size()-1);
-			m_groupRows.add(new Integer(rows.size())); //  group row indicator
+			m_groupRows.add(Integer.valueOf(rows.size())); //  group row indicator
 			rows.add(newRow);
 		}
 		log.fine("End Rows=" + rows.size());
@@ -364,7 +364,7 @@ class RModelData
 		{
 			m_groupRowsIndicator = new ArrayList<Boolean>(rows.size());
 			for (int r = 0; r < rows.size(); r++)
-				m_groupRowsIndicator.add(Boolean.valueOf(m_groupRows.contains(new Integer(r))));
+				m_groupRowsIndicator.add(Boolean.valueOf(m_groupRows.contains(Integer.valueOf(r))));
 		}
 		if (row < 0 || row >= m_groupRowsIndicator.size())
 			return false;
