@@ -120,7 +120,7 @@ public class DBObject_Unique implements DBObjectInterface {
 			boolean isDeferred = dbEngine.isTrue(parent.getResultSetString(rs, "INITIALLY_DEFERRED"));
 			DBObject_Unique_Table obj = new DBObject_Unique_Table(parent, uniqueName, counter);
 			obj.initializeDefinition(tableName, isDeferrable, isDeferred);
-			headerMap.put(new Integer(counter), obj);
+			headerMap.put(Integer.valueOf(counter), obj);
 			counter ++;
 		}
 		parent.releaseResultSet(rs);
@@ -140,7 +140,7 @@ public class DBObject_Unique implements DBObjectInterface {
 			String columnName = parent.getResultSetString(rs, "COLUMN_NAME");
 			DBObject_Unique_Column obj = new DBObject_Unique_Column(parent, uniqueName, uniqueSeq);
 			obj.initializeDefinition(tableName, columnName);
-			contentMap.put(new Integer(uniqueSeq), obj);
+			contentMap.put(Integer.valueOf(uniqueSeq), obj);
 		}
 		parent.releaseResultSet(rs);
 	}
