@@ -119,7 +119,7 @@ public class WLocationEditor extends WEditor implements EventListener, PropertyC
     {
         if (m_value == null)
             return null;
-        return new Integer(m_value.getC_Location_ID());
+        return Integer.valueOf(m_value.getC_Location_ID());
     }
 
     @Override
@@ -246,7 +246,7 @@ public class WLocationEditor extends WEditor implements EventListener, PropertyC
 	            int C_Location_ID = 0;
 	            if (m_value != null)
 	                C_Location_ID = m_value.getC_Location_ID();
-	            Integer ii = new Integer(C_Location_ID);
+	            Integer ii = Integer.valueOf(C_Location_ID);
 	            //  force Change - user does not realize that embedded object is already saved.
 	            ValueChangeEvent valuechange = new ValueChangeEvent(this,getColumnName(),null,null);
 	            fireValueChange(valuechange);   //  resets m_mLocation
