@@ -379,7 +379,7 @@ public class WBPartner extends Window implements EventListener, ValueChangeListe
 		if (m_pLocation != null)
 		{
 			int location = m_pLocation.getC_Location_ID();
-			fAddress.setValue (new Integer(location));
+			fAddress.setValue(Integer.valueOf(location));
 			fPhone.setText(m_pLocation.getPhone());
 			fPhone2.setText(m_pLocation.getPhone2());
 			fFax.setText(m_pLocation.getFax());
