@@ -314,7 +314,7 @@ public class RolePanel extends Window implements EventListener, Deferrable
         	//  initial client - Elaine 2009/02/06
         	UserPreference userPreference = SessionManager.getUserPreference();
 			String initDefault = userPreference.getProperty(UserPreference.P_CLIENT);
-            KeyNamePair roleKNPair = new KeyNamePair(new Integer((String)lstItemRole.getValue()), lstItemRole.getLabel());
+            KeyNamePair roleKNPair = new KeyNamePair(Integer.valueOf((String) lstItemRole.getValue()), lstItemRole.getLabel());
             KeyNamePair clientKNPairs[] = login.getClients(roleKNPair);
             if(clientKNPairs != null && clientKNPairs.length > 0)
             {
@@ -347,7 +347,7 @@ public class RolePanel extends Window implements EventListener, Deferrable
 			//  initial organisation - Elaine 2009/02/06
         	UserPreference userPreference = SessionManager.getUserPreference();
 			String initDefault = userPreference.getProperty(UserPreference.P_ORG);
-            KeyNamePair clientKNPair = new KeyNamePair(new Integer((String)lstItemClient.getValue()), lstItemClient.getLabel());
+            KeyNamePair clientKNPair = new KeyNamePair(Integer.valueOf((String)lstItemClient.getValue()), lstItemClient.getLabel());
             KeyNamePair orgKNPairs[] = login.getOrgs(clientKNPair);
             if(orgKNPairs != null && orgKNPairs.length > 0)
             {
@@ -377,7 +377,7 @@ public class RolePanel extends Window implements EventListener, Deferrable
 			//  initial warehouse - Elaine 2009/02/06
         	UserPreference userPreference = SessionManager.getUserPreference();
 			String initDefault = userPreference.getProperty(UserPreference.P_WAREHOUSE);
-            KeyNamePair organisationKNPair = new KeyNamePair(new Integer((String)lstItemOrganisation.getValue()), lstItemOrganisation.getLabel());
+            KeyNamePair organisationKNPair = new KeyNamePair(Integer.valueOf((String)lstItemOrganisation.getValue()), lstItemOrganisation.getLabel());
             KeyNamePair warehouseKNPairs[] = login.getWarehouses(organisationKNPair);
             if(warehouseKNPairs != null && warehouseKNPairs.length > 0)
             {
